Fix spacing for raid cards

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ h1 {
   display: flex;
   gap: 1.5rem;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .raid .card {
